# AutoUncertainties

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  ruff.toml  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml
.github/workflows/: python-app.yml  python-publish.yml  python-test.yml
auto_uncertainties/: __init__.py  __init__.pyi  _version.py  display_format.py  exceptions.py  pandas_compat.py  pandas_ext_array.py  uncertainty.py  util.py  wrap_numpy.py
auto_uncertainties/numpy/: __init__.py  __init__.pyi  numpy_wrappers.py
auto_uncertainties/pandas/: __init__.py  __init__.pyi  pandas_ext_array.py  unc_array.py  unc_dtype.py
auto_uncertainties/pint/: __init__.py  __init__.pyi  extensions.py
auto_uncertainties/uncertainty/: __init__.py  __init__.pyi  uncertainty_containers.py
docs/: basic_usage.rst  conf.py  getting_started.rst  index.rst  numpy_integration.rst  pandas_integration.rst  requirements.txt
docs/source/: auto_uncertainties.numpy.rst  auto_uncertainties.pandas.rst  auto_uncertainties.rst  auto_uncertainties.uncertainty.rst  basic_usage.rst  conf.py  getting_started.rst  index.rst  jinja_formatters.py  modules.rst  numpy_integration.rst  pandas_integration.rst
docs/source/_autoapi_templates/python/: class.rst  data.rst  function.rst  method.rst  property.rst  typealias.rst  typevar.rst
hooks/: fix_line_endings.py  generate_init.py
paper/: paper.bib  paper.md  removed_sections.md
tests/: test_display_format.py  test_numpy_wrap.py  test_pandas_interface.py  test_uncertainty.py  test_util.py
tests/pandas/: conftest.py  test_pandas_extension.py
uncert/: uncertainty.py  wrap_numpy.py
