[project]
name = "auto_uncertainties"
authors = [
    {name = "Varchas Gopalaswamy", email = "vgop@lle.rochester.edu"},
    {name = "Ethan Mentzer", email = "ementzer@u.rochester.edu"},
]
description = "Linear Uncertainty Propagation with Auto-Differentiation"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "numpy >= 1.23.0",
    "jax >= 0.3.14",
    "jaxlib >= 0.3.14",
    "joblib >= 1.2.0",
    "loguru >= 0.6.0",
    "lazy_loader==0.4",
]
dynamic = ["version"]

[project.optional-dependencies]
CI = ["pytest", "pytest-cov", "hypothesis", "pylint", "pint"]
pandas = ["pandas >= 1.5.1"]
docs = [
    "sphinx >= 4.1.2",
    "sphinx_rtd_theme >= 1.0.0",
    "sphinxcontrib-bibtex >= 2.3.1",
    "sphinxcontrib-napoleon >= 0.7",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-design",
    "graphviz",
    "sphinx-autoapi",
    "furo",
]

[build-system]
requires = ["setuptools >= 67.0.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "auto_uncertainties/_version.py"

[tool.setuptools.packages.find]
exclude = ["tests/*"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
stubPath = "typings"
typeCheckingMode = "basic"
reportUnusedImport = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUnusedVariable = "none"
reportDuplicateImport = "none"
reportPrivateImportUsage = "none"
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportMissingImports = false
exclude = ["install*", "public*", "**/tests*", "**/resources*"]

[tool.coverage.run]
source = ["./"]
omit =  ["*/test*", "*/*__init__.py", "*/_version.py"]


[tool.pytest.ini_options]
testpaths = ["tests"]

